muchos cambios para la app web

--- a/src/components/Brand/Brand.css
+++ b/src/components/Brand/Brand.css
@@ -11,4 +11,5 @@ font-family: "Quicksand", sans-serif;
     font-size: 2rem;
     font-family: "Climate Crisis",sans-serif;
     color: white;
+    text-decoration: none;
 }
