--- a/src/components/ItemList/Item.css
+++ b/src/components/ItemList/Item.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Fjalla+One&family=Quicksand:wght@300..700&display=swap');
+
+/*
+font-family: "Climate Crisis", sans-serif;
+font-family: "Fjalla One", sans-serif;
+font-family: "Quicksand", sans-serif;
+*/
+
 .item--list__container {
     display: flex;
     flex-wrap: wrap;
@@ -34,7 +42,9 @@
 
 .item--title {
     color: rgb(127, 47, 206);
+    font-family: "Fjalla One", sans-serif;
     font-size: 1.5rem;
+    font-weight: 400;
     overflow: auto;
     margin: 1rem 0 0 0 ;
     padding: 0;
@@ -46,6 +56,7 @@
     max-height: 100px;
     overflow: auto;
     margin-top: 0;
+    font-family: "Quicksand", sans-serif;
 }
 
 .item--price {
@@ -57,6 +68,7 @@
 }
 
 .item--counter__container {
+    font-family: "Quicksand", sans-serif;
     display: flex;
     justify-content: center;
     gap: 10px;
@@ -70,6 +82,7 @@
 }
 
 .item--cart__button {
+    font-family: "Quicksand", sans-serif;
     padding: 10px 15px;
     background-color: #383838;
     border-radius: 5px;
