--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -15,6 +15,15 @@
 }
 
 .main--container {
-    width: 80%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
     flex: 1
+}
+.item--list__container{
+    width: 80%;
+}
+.Items--Complete{
+    display: flex;
+    justify-content: center;
 }
