--- a/src/App.css
+++ b/src/App.css
@@ -24,12 +24,14 @@ body{
     justify-content: center;
 }
 .Category--Container__Button{
-    background-color: black;
-    color: white;
+    font-size: 1rem;
+    background-color: transparent;
+    color: black;
     border: none;
-    margin: 0 1rem;
+    margin: 0.5rem 1rem;
     font-family: "Quicksand", sans-serif;
+    transition: 0.2s;
 }
 .Category--Container__Button:hover{
-    color: rgb(174, 0, 255);
+    color: #ffffff;
 }
