--- a/src/components/ItemList/Item.css
+++ b/src/components/ItemList/Item.css
@@ -11,6 +11,7 @@ font-family: "Quicksand", sans-serif;
     flex-wrap: wrap;
     justify-content: space-around;
     gap: 1rem;
+    margin: 1.5rem 0rem 1.5rem 0rem; 
 }
 
 .item__container {
@@ -21,12 +22,19 @@ font-family: "Quicksand", sans-serif;
     border: 2px solid #444;
     border-radius: 5px;
     padding: 10px;
-    margin: 10px;
+    margin: 1rem;
     width: 250px;
     box-shadow: 0.5rem 0.5rem 0 black;
     transition: 0.2s;
     padding: 1rem;
     border-radius: 1rem 0.2rem 1rem 0.2rem;
+    & a{
+        color: #637659;
+        text-decoration: none;
+        & h2{
+            color : black;
+        }
+    }
 }
 .item__container:hover{    
     box-shadow: 0.2rem 0.2rem 0 black;
@@ -43,7 +51,7 @@ font-family: "Quicksand", sans-serif;
 }
 
 .item--title {
-    color: #310666;
+    color: white;
     font-family: "Fjalla One", sans-serif;
     font-size: 1.5rem;
     font-weight: 400;
