--- a/src/components/Navbar/NavBar.css
+++ b/src/components/Navbar/NavBar.css
@@ -1,38 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Fjalla+One&family=Quicksand:wght@300..700&display=swap');
-
-/*
-font-family: "Climate Crisis", sans-serif;
-font-family: "Fjalla One", sans-serif;
-font-family: "Quicksand", sans-serif;
-*/
-
-.Navbar{
-    display:flex;
+.navbar__wrapper {
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: space-around;
-    padding: 0rem 1rem;
-    background-color: #383838;
-    & .Navi{
-        box-sizing: border-box;
-        display: flex;
-        align-content: flex-start;
-        align-items: center;
-        justify-content: space-between;
-        & .Carrito{
-            display: flex;
-            align-items: end;
-        }
-        & .ListadoDeCategorias{
-            display:flex;
-            list-style: none;
-            color: white;
-            & a{
-                font-family: "Quicksand", sans-serif;
-                font-weight: 400;
-                padding: 0.5rem;
-                color: #ffffff;
-                text-decoration: none;
-            }
-        }
-    }
+}
+.hidden {
+    display: none;
+}
+.Navbar--Right{
+    display: flex;
+    align-items: center;
+    margin: 0px 2rem 0rem 0rem;
 }
