--- a/src/components/CartContainer/CartContainer.css
+++ b/src/components/CartContainer/CartContainer.css
@@ -1,3 +1,33 @@
 .Carrito{
-    background-color: antiquewhite;
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(255, 255, 255, 0.27);
+    backdrop-filter: blur(5px);
+    align-items: center;
+    padding: 1rem;
+    margin-top: 1.5rem;
+    border:2px solid ;
+    border-radius: 1rem;
+    box-shadow: 0.5rem 0.5rem 0 black;
+    transition: box-shadow 0.15s;
+}
+.Carrito:hover{
+    box-shadow: 0.3rem 0.3rem 0 black;
+}
+.item--cart__button {
+    font-family: "Quicksand", sans-serif;
+    padding: 10px 15px;
+    background-color: #383838;
+    border-radius: 5px;
+    color: white;
+    border: none;
+    cursor: pointer;
+    transition: 0.2s;
+    border: 1px solid transparent;
+    border-radius: 1rem 0.2rem 1rem 0.2rem;
+}
+.item--cart__button:hover{
+    border: 1px solid black;
+    background-color: #555;
+    box-shadow: inset 0.2rem 0.2rem  0 black;
 }
