--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -5,44 +5,53 @@ font-family: "Climate Crisis", sans-serif;
 font-family: "Fjalla One", sans-serif;
 font-family: "Quicksand", sans-serif;
 */
-
+*{
+    text-decoration: none;
+}
 .cart--container{
     color: white;
     padding: 5px;
     border-radius: 50%;
-    text-decoration: none;
 }
 
-.Carrito--Widget {
-    text-decoration: none;
-    color: white;
+.Carrito--Widget{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2.5rem;
+    width: 2.5rem;
+    background-color: rgb(255, 255, 255);
+    border-radius: 0.5rem;
+    border: 1px solid white;
+    box-shadow:0.3rem 0.3rem 0 black;
+    overflow: hidden;
+}
+
+.Carrito--Widget a {
+    z-index: 0;
+    margin: 0;
+    translate: 6px 2px;
+}
+
+.Carrito--Widget span{
+    margin: 0;
+    font-size: 0.7rem;
+    color: rgb(255, 255, 255);
     font-family: "Quicksand", sans-serif;
-}
-.Carrito--Widget::after{
-    text-decoration: none;
+    translate: -5px 10px;
+    background-color: rgb(165, 27, 27);
+    padding: 0rem 0.3rem;
+    border-radius: 0.5rem;
+    border: 1px solid black;
 }
 
-.Carrito--widget span{
-    font-size: 1rem;
-    font-family: "Quicksand",sans-serif;
-    translate: -0.7rem 0rem;
-    text-decoration: none;
-}
 #CartLogo{
-    width: 40px;
+    width: 30px;
     transition: 0.5s ease-out;
 }
-#CartLogo::before{
-    translate: 5px -5px;
-}
+
 #CartLogo:hover{
     cursor: pointer;
-    translate: -5px 5px;
-}
-.cantidad{
-    color:white;
-    text-decoration: none;
-}
-.cantidad::after{
-    text-decoration: none;
+    translate: 0px -2px;
+    
 }
