--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Fjalla+One&family=Quicksand:wght@300..700&display=swap');
 .footer{
-    margin-top: 1rem;
     display: flex;
     justify-content: center;
     width: 100%;
@@ -11,6 +10,7 @@
     text-shadow: 0.4rem 0.4rem 0rem black;
     background-color: #383838;
     transition: 0.3s;
+    margin-top:auto ;
 }
 .footer:hover{
     text-shadow: 0.15rem 0.15rem 0rem rgb(0, 0, 0);
