--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -2,14 +2,35 @@
 .item--count__container {
     display: flex;
     flex-direction: column;
-    gap: 10px;
 }
 
 .item--count--counter__container {
     display: flex;
-    gap: 10px;
+    background-color: #ffffff;
+    align-items: center;
+    justify-content: center;
+    border-radius: 1.5rem;
+    border: 1px solid black;
 }
 
 .item--count-button {
-    padding: 5px 10px;
+    width: 3rem ;
+    height: 3rem;
+    background-color: transparent;
+    border:1px solid transparent;
+    translate: 0rem 0.2rem;
+}
+.item--count-button:hover{
+    cursor: pointer;
+}
+.contador{
+    margin: 0rem 1.5rem;
+    display: flex;
+    width: 2rem;
+    height: 2rem;
+    align-items: center;
+    justify-content: center;
+}
+.fi-rr-add, .fi-rr-minus-circle{
+    font-size: 1.5rem;
 }
