--- a/src/components/ItemDetailContainer/ItemDetailContainer.css
+++ b/src/components/ItemDetailContainer/ItemDetailContainer.css
@@ -1,5 +1,31 @@
 .item--detail__container {
-    display: grid;
+    display: flex;
     place-content: center;
-    margin-top: 30px;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+}
+.navigation-button{
+    height: 2rem;
+    display: flex;
+    align-items: center;
+    background-color: white;
+    border: 1px solid transparent;
+    border-radius: 1rem;
+    transition: box-shadow 0.3s;
+}
+
+.left{
+    translate: 10px 0px;
+    box-shadow: 0.5rem 0.5rem 0 black;
+}
+.left:hover{
+    box-shadow: 0.2rem 0.2rem 0 black;
+}
+.right{
+    translate: -10px 0px;
+    box-shadow: -0.5rem 0.5rem 0 black;
+}
+.right:hover{
+    box-shadow: -0.2rem 0.2rem 0 black;
 }
