--- a/src/components/ItemList/Item.css
+++ b/src/components/ItemList/Item.css
@@ -10,8 +10,9 @@ font-family: "Quicksand", sans-serif;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    gap: 1rem;
-    margin: 1.5rem 0rem 1.5rem 0rem; 
+    padding: 2rem;
+    min-height: 68vh;
+    align-content: center;
 }
 
 .item__container {
@@ -25,7 +26,6 @@ font-family: "Quicksand", sans-serif;
     width: 250px;
     box-shadow: 0.5rem 0.5rem 0 black;
     transition: 0.2s;
-    padding: 1rem;
     border-radius: 0.5rem;
     & a{
         color: #637659;
