--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -1,19 +1,20 @@
-
-
-.layout--container {
-    width: 80%;
-    margin: 0px auto;
-    display: flex;
-    flex-direction: column;
+body{
     min-height: 100vh;
 }
 
+.layout--container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .header__wrapper {
-    background-color: #303030;
+    background-color: #383838;
     display: flex;
     justify-content: space-around;
 }
-
-.main--container {
-    flex: 1
+.main--container{
+    width: 100%;
 }
