--- a/src/components/CartContainer/CartContainer.css
+++ b/src/components/CartContainer/CartContainer.css
@@ -1,33 +1,70 @@
-.Carrito{
+.Complete_Cart{
+    display: flex;
+    justify-content: center;
+}
+.Cart_Container_Mas_Title{
     display: flex;
     flex-direction: column;
-    background-color: rgba(255, 255, 255, 0.27);
-    backdrop-filter: blur(5px);
     align-items: center;
-    padding: 1rem;
-    margin-top: 1.5rem;
-    border:2px solid ;
-    border-radius: 1rem;
-    box-shadow: 0.5rem 0.5rem 0 black;
-    transition: box-shadow 0.15s;
+    justify-content: center;
+    margin:1rem;
 }
-.Carrito:hover{
-    box-shadow: 0.3rem 0.3rem 0 black;
+.Cart_Container{ 
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
-.item--cart__button {
-    font-family: "Quicksand", sans-serif;
-    padding: 10px 15px;
-    background-color: #383838;
-    border-radius: 5px;
-    color: white;
-    border: none;
-    cursor: pointer;
-    transition: 0.2s;
+.Cart_Aside{
+    margin-top: 6.3rem;
+    margin-right: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-width: 15rem;
+    height: 8rem;
+    background-color: #ffffff;
     border: 1px solid transparent;
-    border-radius: 1rem 0.2rem 1rem 0.2rem;
+    border-radius: 1.2rem;
+    box-shadow: 0.5rem 0.5rem 0 black;
+    transition: box-shadow 0.1s;
 }
-.item--cart__button:hover{
-    border: 1px solid black;
-    background-color: #555;
-    box-shadow: inset 0.2rem 0.2rem  0 black;
+.Cart_Aside:hover{
+    box-shadow: 0.2rem 0.2rem 0 black;
+}
+.Total{
+    margin: 0;
+    color: #383838;
+    font-size: 1.8rem;
+}
+.botonera{
+    display: flex;
+    margin-top: 0.5rem;
+    background-color: transparent;
+    border-radius: 0.7rem;
+    border: 1px solid transparent;
+}
+.button{
+    display: flex;
+    justify-content: space-around;
+    background-color: #383838;
+    align-items: center;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    font-size: 1rem;
+    font-weight: 500;
+    color: #ffffff;
+    border: 1px solid transparent;
+    margin: 0.5rem 1rem;
+    box-shadow:0.4rem 0.4rem 0 black;
+    font-family: "Fjalla One", sans-serif;
+    transition: box-shadow 0.1s;
+}
+.button:hover{
+    cursor: pointer; 
+    box-shadow: 0.2rem 0.2rem 0 black;
+}
+.Carrito_Vacio{
+    display: flex;
+    flex-direction: column;
 }
