--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -32,17 +32,22 @@ font-family: "Quicksand", sans-serif;
     margin: 0;
     translate: 6px 2px;
 }
-
+.Carrito--Widget i{
+    font-size: 1.5rem;
+    translate: 0.5rem 0rem;
+    color: black;
+}
 .Carrito--Widget span{
     margin: 0;
     font-size: 0.7rem;
-    color: rgb(255, 255, 255);
+    font-weight: 700;
+    color: rgb(0, 0, 0);
     font-family: "Quicksand", sans-serif;
     translate: -5px 10px;
-    background-color: rgb(165, 27, 27);
+    background-color: rgb(255, 162, 0);
     padding: 0rem 0.3rem;
     border-radius: 0.5rem;
-    border: 1px solid black;
+    border: 1px solid transparent;
 }
 
 #CartLogo{
