--- a/src/components/ItemDetailContainer/ItemDetailContainer.css
+++ b/src/components/ItemDetailContainer/ItemDetailContainer.css
@@ -1,5 +1,35 @@
+
 .item--detail__container {
     display: grid;
     place-content: center;
     margin-top: 30px;
+    display: flex;
+    align-items: center;
+}
+.navigation-button{
+    background-color: transparent;
+    font-size: 2rem;
+    color:#383838;
+    border: 1px solid transparent;
+    transition: 0.1s;
+}
+.navigation-button i:hover{
+    cursor: pointer;
+}
+.Cargando{
+    display: flex;
+    align-items: center;
+    min-height: 70vh;
+}
+.right{
+    filter:drop-shadow(-0.4rem 0.4rem 0.5rem rgba(0, 0, 0, 0.482));
+    &:hover{
+        filter:drop-shadow(-0.2rem 0.2rem 0.2rem rgba(0, 0, 0, 0.482))
+    }
+}
+.left{
+    filter:drop-shadow(0.4rem 0.4rem 0.5rem rgba(0, 0, 0, 0.482));
+    &:hover{
+        filter:drop-shadow(0.2rem 0.2rem 0.2rem rgba(0, 0, 0, 0.482))
+    }
 }
